# spec_driven_xpbd

./: CLAUDE.md  README.md  SPECIFICATIONS.md  pyproject.toml
src/spec_driven_xpbd/: __init__.py  cli.py  viewer.py
src/spec_driven_xpbd/engine/: __init__.py  collision.py  joints.py  math.py  state.py  step.py
src/spec_driven_xpbd/scenes/: box_arena.py  box_on_slab.py  double_pendulum.py  falling_box.py  pendulum.py  stack.py
tests/: test_collision.py  test_joints.py  test_scenes.py  test_step.py
